Still not completed

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,5 @@
     <string name="title_activity_galleries">Galleries</string>
     <string name="title_activity_contact_us">ContactUs</string>
     <string name="title_activity_animal_service_list">AnimalServiceList</string>
+    <string name="title_activity_try_list_view">tryListView</string>
 </resources>
